fixed: horizontal scrolling on small screen sizes #15

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -20,6 +20,7 @@
     @include font-h1;
 
     @media (max-width: 480px) {
+      max-width: 300px;
       padding: 20px 0 0 20px;
       line-height: 26px;
       font-size: 20px;
@@ -37,16 +38,7 @@
   }
 
   &__guests-dropdown {
-    width: 320px;
     padding-top: 20px;
-
-    @media (max-width: 480px) {
-      padding: 20px;
-
-      .dropdown__guests {
-        width: 100%;
-      }
-    }
   }
 
   &__guests-dropdown-title {
@@ -57,17 +49,8 @@
   }
 
   &__guests-dropdown-search {
-    width: 320px;
     padding-top: 20px;
     padding-bottom: 12px;
-
-    @media (max-width: 480px) {
-      padding: 20px;
-
-      .dropdown__guests {
-        width: 100%;
-      }
-    }
   }
 
   &__register-details {
