--- a/src/pages/landing-page/landing-page.scss
+++ b/src/pages/landing-page/landing-page.scss
@@ -33,12 +33,14 @@
   }
 
   &__search-room {
+    min-width: 380px;
     @media (max-width: 960px) {
       align-items: center;
       padding-bottom: 100px;
     }
     @media (max-width: 480px) {
       padding-bottom: 50px;
+      min-width: 320px;
     }
   }
 
