--- a/src/pages/registration-page/registration-page.scss
+++ b/src/pages/registration-page/registration-page.scss
@@ -39,6 +39,7 @@
     }
     @media (max-width: 480px) {
       padding-bottom: 50px;
+      min-width: 320px;
     }
   }
 }
