--- a/src/pages/sing-in-page/sing-in-page.scss
+++ b/src/pages/sing-in-page/sing-in-page.scss
@@ -1,8 +1,7 @@
 @import '@variables';
 
 .sing-in {
-  background: url('./image/sing-in-background.jpg')
-    no-repeat;
+  background: url('./image/sing-in-background.jpg') no-repeat;
   background-size: cover;
   background-size: 108%;
   background-position: 40% 53.5%;
@@ -43,6 +42,7 @@
     }
     @media (max-width: 480px) {
       padding-bottom: 50px;
+      min-width: 320px;
     }
   }
 }
